--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
                 <div class="col-lg-5 col-xl-7">
                     <div class="image-container">
                       <div class="text-container">
-                          <h1 class="h1-large">Welcom Admin</h1>
+                          <h1 class="h1-large">Welcome Admin</h1>
 
                           <a class="btn-solid-lg" href="bill.html">Product List</a>
                           <a class="btn-outline-lg" href="invoice.html">Invoice</a>
