--- a/bill.html
+++ b/bill.html
@@ -175,8 +175,17 @@ tr:hover .cut { opacity: 1; }
 		<header>
 			<h1>Product Bill</h1>
 		</header>
+		<table class="inventory">
+		<tbody>
+			<tr>
+				<td><p>Enter Custmer Name</p></td>
 
 
+				<td><span contenteditable></span></td>
+
+			</tr>
+		</tbody>
+</table>
 			<table class="inventory">
 				<thead>
 					<tr>
@@ -192,148 +201,148 @@ tr:hover .cut { opacity: 1; }
 						<td width="300"><p>Front End Consultation</p></td>
 
 
-						<td><span contenteditable>4</span></td>
+						<td><span contenteditable> </span></td>
 
 					</tr>
 				</tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable> </span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable> </span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable> </span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable> </span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody><tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody><tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody><tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody><tbody>
           <tr>
             <td width="300"><p>Front End Consultation</p></td>
-  <td><span contenteditable>4</span></td>
+  <td><span contenteditable></span></td>
           </tr>
         </tbody>
         <tbody>
@@ -341,7 +350,7 @@ tr:hover .cut { opacity: 1; }
             <td width="300"><p>Front End Consultation</p></td>
 
 
-            <td><span contenteditable>4</span></td>
+            <td><span contenteditable></span></td>
 
           </tr>
         </tbody>
