--- a/invoice.html
+++ b/invoice.html
@@ -207,9 +207,9 @@ tr:hover .cut { opacity: 1; }
 					<tr>
 						<th><span contenteditable>Item</span></th>
 
-						<th><span contenteditable>Rate</span></th>
-						<th><span contenteditable>Quantity</span></th>
 						<th><span contenteditable>Price</span></th>
+						<th><span contenteditable>Quantity</span></th>
+						<th><span contenteditable>Total</span></th>
 					</tr>
 				</thead>
 				<tbody>
